[Chromoting.com] start-host-main crashes

Looks like net::ChannelIDServiceWorker requires TaskScheduler to be initialized,
but we do not. The top of the stack trace is,
[0316/162617.947344:FATAL:post_task.cc(62)] Check failed:
TaskScheduler::GetInstance(). Ref. Prerequisite section of post_task.h

BUG=702816

Review-Url: https://codereview.chromium.org/2757063002
Cr-Commit-Position: refs/heads/master@{#458004}